--- a/src/template.html
+++ b/src/template.html
@@ -15,10 +15,10 @@
 
     <header class="second-header">
       <nav>
-        <button>HOME</button>
-        <button>MENU</button>
-        <button>ABOUT US</button>
-        <button>CONTACT</button>
+        <button class="homeBtn">HOME</button>
+        <button class="menuBtn">MENU</button>
+        <button class="aboutBtn">ABOUT US</button>
+        <button class="contactBtn">CONTACT</button>
       </nav>
     </header>
     <div id="content"></div>
