--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nirajan's Resturant</title>
+    <title>Momo Station</title>
   </head>
   <body>
     <header class="first-header">
